Fix header height jump when switching tabs.

--- a/css/cy_borg.css
+++ b/css/cy_borg.css
@@ -214,7 +214,7 @@
       margin: 2px; }
 
 .cy.sheet.actor.character section.window-content .sheet-header {
-  height: 443px; }
+  height: 436px; }
   .cy.sheet.actor.character section.window-content .sheet-header .left-col .name {
     flex: 0 0 52px; }
     .cy.sheet.actor.character section.window-content .sheet-header .left-col .name input[type="text"] {
