--- a/scss/actor/_character-sheet.scss
+++ b/scss/actor/_character-sheet.scss
@@ -2,7 +2,7 @@
 .cy.sheet.actor.character {
   section.window-content {
     .sheet-header {
-      height: 443px;
+      height: 436px;
       .left-col {
         .name {
           flex: 0 0 52px;
